M68k: Split instruction and opcode handling.
This is in preparation for allowing this code to be shared between
a small handwritten interpreter and an unroll interpreter generator.

--- a/m68k/CMakeLists.txt
+++ b/m68k/CMakeLists.txt
@@ -7,6 +7,10 @@ add_executable(generator
 	"emit.h"
 	"emit-instructions.c"
 	"emit-instructions.h"
+	"instruction.h"
+	"instruction-properties.c"
+	"instruction-properties.h"
+	"instruction-actions.h"
 	"generator.c"
 )
 
