--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,8 @@ project(clown68000 LANGUAGES C)
 
 add_library(clown68000 STATIC
 	"clowncommon/clowncommon.h"
-	"m68k.c"
-	"m68k.h"
+	"clown68000.c"
+	"clown68000.h"
 	"m68k/opcode.c"
 	"m68k/opcode.h"
 )
