Un-generate condition code logic.
This is slower than the previous code (even moreso if the lookup
table is not used), but once the refactor is complete, the
interpreter should be faster overall.

This is the first part of a big new refactor: rather than generating
an 'unrolled' interpreter, I want to compute a gigantic lookup table
of function pointers, with each function pointer representing a
'step' of instruction execution. This is a lot like the original
version of the interpreter, which used giant switch statements in
this way, but this new method aims to improve upon it by eliminating
the overhead of using a series of switch statements, and instead use
a single giant lookup table.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ add_library(clown68000 STATIC
 	"clowncommon/clowncommon.h"
 	"clown68000.c"
 	"clown68000.h"
+	"m68k/instruction-properties.c"
+	"m68k/instruction-properties.h"
 	"m68k/opcode.c"
 	"m68k/opcode.h"
 )
