--- a/disassembler/CMakeLists.txt
+++ b/disassembler/CMakeLists.txt
@@ -1,11 +1,28 @@
 cmake_minimum_required(VERSION 3.0...3.5)
 
-project(clown68000_disassembler LANGUAGES C)
+project(disassembler LANGUAGES C)
 
-add_executable(clown68000_disassembler
-	"main.c"
+add_library(disassembler STATIC
 	"disassembler.c"
 	"disassembler.h"
 	"../m68k/opcode.c"
 	"../m68k/opcode.h"
+)
+
+set_target_properties(disassembler PROPERTIES
+	C_STANDARD 90
+	C_STANDARD_REQUIRED NO
+	C_EXTENSIONS OFF
+)
+
+add_executable(disassembler-tool
+	"main.c"
+)
+
+target_link_libraries(disassembler-tool PRIVATE disassembler) 
+
+set_target_properties(disassembler-tool PROPERTIES
+	C_STANDARD 90
+	C_STANDARD_REQUIRED NO
+	C_EXTENSIONS OFF
 )
